docs: 增加IDEA说明